--- a/src/Bangnation/CommonBundle/Resources/public/sass/variables.scss
+++ b/src/Bangnation/CommonBundle/Resources/public/sass/variables.scss
@@ -5,6 +5,10 @@
 $section-padding-top: 600px;
 $iconSpritePath: url('/bundles/bangnationcommon/images/glyphicons-halflings.png');
 $iconWhiteSpritePath: url('/bundles/bangnationcommon/images/glyphicons-halflings-white.png');
+
+$navbarBackground: #feb103;
+$navbarBackgroundHighlight: #feb103;
+
 /*
 $navbarBackground: grayLight; 
 */
